// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarChart utils preparePlotConfigBuilder orientation 1`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder orientation 2`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder orientation 3`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "x",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "m/s",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 2,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder stacking 1`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder stacking 2`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder stacking 3`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder value visibility 1`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;

exports[`BarChart utils preparePlotConfigBuilder value visibility 2`] = `
{
  "axes": [
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 15,
      "grid": {
        "show": false,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": 0,
      "scale": "x",
      "show": true,
      "side": 3,
      "size": [Function],
      "space": [Function],
      "splits": [Function],
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": false,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": "browser",
      "values": [Function],
    },
    {
      "filter": undefined,
      "font": "12px 'Inter', 'Helvetica', 'Arial', sans-serif",
      "gap": 5,
      "grid": {
        "show": true,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "incrs": undefined,
      "labelGap": 0,
      "rotate": -0,
      "scale": "m/s",
      "show": true,
      "side": 2,
      "size": [Function],
      "space": [Function],
      "splits": undefined,
      "stroke": "rgb(204, 204, 220)",
      "ticks": {
        "show": true,
        "size": 4,
        "stroke": "rgba(240, 250, 255, 0.09)",
        "width": 1,
      },
      "timeZone": undefined,
      "values": [Function],
    },
  ],
  "cursor": {
    "dataIdx": [Function],
    "drag": {
      "setScale": false,
      "x": false,
      "y": false,
    },
    "focus": {
      "dist": [Function],
      "prox": 1000,
    },
    "points": {
      "bbox": [Function],
      "fill": "rgba(255,255,255,0.4)",
      "size": [Function],
      "stroke": [Function],
      "width": [Function],
    },
    "x": false,
    "y": false,
  },
  "focus": {
    "alpha": 1,
  },
  "hooks": {
    "draw": [
      [Function],
    ],
    "drawClear": [
      [Function],
    ],
    "init": [
      [Function],
    ],
  },
  "legend": {
    "show": false,
  },
  "mode": 1,
  "ms": 1,
  "padding": [
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "scales": {
    "m/s": {
      "asinh": undefined,
      "auto": true,
      "dir": 1,
      "distr": 1,
      "log": undefined,
      "ori": 0,
      "range": [Function],
      "time": undefined,
    },
    "x": {
      "asinh": undefined,
      "auto": true,
      "dir": -1,
      "distr": 2,
      "log": undefined,
      "ori": 1,
      "range": [Function],
      "time": false,
    },
  },
  "select": undefined,
  "series": [
    {
      "value": [Function],
    },
    {
      "facets": undefined,
      "fill": [Function],
      "paths": [Function],
      "points": {
        "fill": "#808080",
        "filter": undefined,
        "size": undefined,
        "stroke": "#808080",
      },
      "pxAlign": true,
      "scale": "m/s",
      "show": true,
      "spanGaps": undefined,
      "stroke": "#808080",
      "value": [Function],
      "width": 2,
    },
  ],
  "tzDate": [Function],
}
`;
